Fix whitespace on page
The notification section ended up taking 100% of page height due to the CSS selector. Now the CSS selector just expands the first child

--- a/app/app.css
+++ b/app/app.css
@@ -20,7 +20,7 @@ label {
   font-weight: bold;
 }
 
-#root > div > div {
+#root > div > div:first-child {
   height: 100%;
 }
 
